--- a/.travis.yml
+++ b/.travis.yml
@@ -18,15 +18,21 @@ env:
   - DJANGO=1.9
   - DJANGO=1.10
   - DJANGO=1.11
+  - DJANGO=2.0
+  - DJANGO=2.1
 
 
 matrix:
   exclude:
     - python: 2.7
       env: DJANGO=2.0
+    - python: 2.7
+      env: DJANGO=2.1
 
     - python: 3.4
       env: DJANGO=2.0
+    - python: 3.4
+      env: DJANGO=2.1
 
     - python: 3.6
       env: DJANGO=1.8
