--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@
 envlist = d{18}-py{27,34,35,36,py}
           d{19,110}-py{27,34,35,36,py}
           d{111}-py{27,34,35,36,py}
+          d{20,21}-py{35,36,py}
 
 skip_missing_interpreters = true
 
@@ -37,9 +38,11 @@ deps=
     d19: django>=1.9,<1.10
     d110: django>=1.10,<1.11
     d111: django>=1.11,<1.12
+    d20: django>=2.0,<2.1
+    d21: django>=2.1,<2.2
 
     ; only for local development
-    d20: django>=2.0dev,<2.11
+    d22: django>=2.2dev,<2.3
     dev: git+https://github.com/django/django.git
 
 
